...

    <string name="hello_world">Please enter your issues below</string>
    <string name="menu_settings">Settings</string>
    <string name="permission_content_provider_label">Read Secure CommCare Data</string>
    <string name="permission_content_provider_description">Allows this app to read data from CommCare while a user is logged in</string>
...
    <string name="audio_file_invalid" cc:translatable="true">File: %s is not a valid audio file.</string>
    <string name="delete_audio_file" cc:translatable="true">Delete</string>
    <string name="confirm_audio_file_deletion" cc:translatable="true">Yes, Delete</string>


    <!-- Start Collect Strings -->

    <string name="cancel" cc:translatable="true">CANCEL</string>
    <string name="cancel_location" cc:translatable="true">Cancel</string>
    <string name="start_recording" cc:translatable="true">Start recording</string>
...
    <string name="replace_location" cc:translatable="true">Replace Location</string>
    <string name="required_answer_error" cc:translatable="true">Sorry, this response is required!</string>
    <string name="review" cc:translatable="true">Continue</string>
    <string name="save_all_answers" cc:translatable="true">Save Form</string>
    <string name="saving_form" cc:translatable="true">Saving Form</string>
...

    <string name="connect_biometric_enroll_fail_button">Go to Settings</string>
    <string name="connect_register_name">Name</string>
    <string name="connect_register_success_title">Account Created</string>

...
    <string name="connect_offline">Offline</string>
    <string name="connect_back_online">Back Online</string>
    <string name="connect_never">Never</string>
    <string name="connect_title">Connect</string>
    <string name="connect_no_jobs">You haven’t been invited to any opportunities yet. Once you’ve been invited to an opportunity, it will appear in this list.</string>
...
    <string name="connect_learn_cta_complete_assessment">Complete assessment</string>
    <string name="connect_learn_cta_take_assessment">Take assessment</string>
    <string name="connect_learn_cta_start">Start</string>

    <string name="connect_delivery_go">Go To App</string>
...
    <string-array name="frequency_vals_labels">
        <item>Never</item>
        <item>Daily</item>
        <item>Weekly</item>
    </string-array>
    <string-array name="pref_enabled_vals">
...
    </string-array>
    <string-array name="pref_enabled_labels">
        <item>Enabled</item>
        <item>Disabled</item>
    </string-array>
    <string-array name="pref_password_show_options_labels">
...
    <string name="recording_notification_resume_action" cc:translatable="true">Resume</string>

    <string name="clear_search_button_description">Clear query</string>
    <string name="face_capture_manual_instructions" cc:translatable="true">Center a face inside the green outline then tap the white button to take the picture</string>
    <string name="face_capture_auto_instructions" cc:translatable="true">Center a face inside the green outline and hold still, the photo will capture automatically</string>
...
