...
                android:id="@+id/query_prompts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/request_button"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/content_start"
                android:paddingTop="@dimen/content_start" />
...
