...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/universal_frame_tile"
        android:layout_below="@+id/entity_select_filter_dropdown">

        <ListView
            android:id="@+id/screen_entity_select_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dividerHeight="0dp"
            android:listSelector="@drawable/selector"/>

        <GridView
...
