<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/search_action_bar"
          android:title="Search"
          android:icon="@drawable/ic_magnify"
          android:showAsAction="collapseActionView|ifRoom"
          android:actionViewClass="android.widget.SearchView" />
    <item android:id="@+id/barcode_scan_action_bar"
          android:title="Scan Barcode"
...
